...
            "state" : "translated",
            "value" : "Płótno rysunku"
          }
        }
      }
    },
    "drawing.clear" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Clear"
          }
...
            "state" : "translated",
            "value" : "Kontynuuj rysowanie"
          }
        }
      }
    },
    "drawing.done" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Preview drawing"
          }
...
            "state" : "translated",
            "value" : "Podgląd rysunku"
          }
        }
      }
    },
    "drawing.eraser" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Eraser"
          }
...
            "value" : "Nobody submitted a drawing"
          }
        },
        "pl" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Nikt nie przesłał rysunku"
          }
        }
      }
    },
    "drawing.number" : {
      "localizations" : {
...
            "value" : "Your drawing"
          }
        },
        "pl" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Twój rysunek"
          }
        }
      }
    },
    "drawing.privateState.error" : {
      "comment" : "A message displayed when the user is unable to load the drawing's private state.",
...
            "state" : "translated",
            "value" : "Nie udało się pobrać stanu gracza."
          }
        }
      }
    },
    "drawing.redo" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Redo"
          }
...
            "value" : "Drawing sent"
          }
        },
        "pl" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Rysunek wysłany"
          }
        }
      }
    },
    "drawing.start" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Start drawing"
          }
...
            "state" : "translated",
            "value" : "Najlepszy rysunek"
          }
        }
      }
    },
    "drawing.undo" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Undo"
          }
...
            "state" : "translated",
            "value" : "Cofnij"
          }
        }
      }
    },
    "drawing.vote" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Vote"
          }
...
            "state" : "translated",
            "value" : "głosów"
          }
        }
      }
    },
    "drawing.voteSaved" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Vote saved"
          }
...
            "state" : "translated",
            "value" : "Gra jest wstrzymana podczas ponownego łączenia ekranu Display."
          }
        }
      }
    },
    "game.started" : {
      "extractionState" : "stale",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Game started!"
...
